--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Lukeos11/hyperbolt-mc-server-status.git"
+    "url": "git+https://github.com/MaitreCapybaraoff/Minecraft-Server-Status-Bot.git"
   },
   "keywords": [
     "Discord-Bot",
@@ -19,12 +19,12 @@
     "Status-Bot",
     "Status-Checker"
   ],
-  "author": "Lukeos11",
+  "author": "maitrecapybaraoff",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Lukeos11/hyperbolt-mc-server-status/issues"
+    "url": "https://github.com/MaitreCapybaraoff/Minecraft-Server-Status-Bot/issues"
   },
-  "homepage": "https://github.com/Lukeos11/hyperbolt-mc-server-status#readme",
+  "homepage": "https://github.com/MaitreCapybaraoff/Minecraft-Server-Status-Bot",
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
